Fix: sticky nav positioned below header (top:65px)

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ canvas{width:100%!important;height:300px!important}
       <div id="strategyQuickStats" style="display:flex;gap:16px;margin-top:8px;flex-wrap:wrap;font-size:0.75rem;font-family:'JetBrains Mono',monospace"></div>
     </div>
     <!-- Sticky Step Controls - outside dayStepperJournal for proper sticky -->
-    <div id="dsStickyNav" style="position:fixed;top:0;left:0;right:0;z-index:100;background:var(--bg-primary);padding:10px 0;border-bottom:1px solid var(--border)">
+    <div id="dsStickyNav" style="position:fixed;top:65px;left:0;right:0;z-index:100;background:var(--bg-primary);padding:10px 0;border-bottom:1px solid var(--border)">
         <div style="display:flex;align-items:center;justify-content:center;gap:16px">
           <button id="dsPrev" style="padding:10px 24px;background:var(--bg-secondary);border:1px solid var(--border);border-radius:var(--radius);color:var(--text-primary);cursor:pointer;font-family:inherit;font-size:1rem;font-weight:600">◀ Prev</button>
           <div style="text-align:center;min-width:180px">
@@ -301,7 +301,7 @@ canvas{width:100%!important;height:300px!important}
           <button id="dsNext" style="padding:10px 24px;background:var(--bg-secondary);border:1px solid var(--border);border-radius:var(--radius);color:var(--text-primary);cursor:pointer;font-family:inherit;font-size:1rem;font-weight:600">Next ▶</button>
         </div>
       </div>
-    <div id="dsStickyNavSpacer" style="height:70px"></div>
+    <div id="dsStickyNavSpacer" style="height:80px"></div>
 
     <div id="dayStepperJournal">
       <!-- Settings -->
