--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@ canvas{width:100%!important;height:300px!important}
         <!-- Date Range -->
         <div style="display:flex;align-items:center;gap:12px;flex-wrap:wrap">
           <span style="font-size:0.85rem;font-weight:700">Date Range</span>
-          <input type="date" id="dsFrom" value="2026-01-01" style="padding:5px 8px;background:var(--bg-secondary);border:1px solid var(--border);border-radius:var(--radius);color:var(--text-primary);font-family:'JetBrains Mono',monospace;font-size:0.8rem">
+          <input type="date" id="dsFrom" value="2026-01-01" style="padding:5px 8px;background:var(--bg-secondary);border:1px solid var(--border);border-radius:var(--radius);color:var(--text-primary);font-family:'JetBrains Mono',monospace;font-size:0.8rem;color-scheme:dark">
           <span style="color:var(--text-muted)">to</span>
-          <input type="date" id="dsTo" value="2026-01-31" style="padding:5px 8px;background:var(--bg-secondary);border:1px solid var(--border);border-radius:var(--radius);color:var(--text-primary);font-family:'JetBrains Mono',monospace;font-size:0.8rem">
+          <input type="date" id="dsTo" value="2026-01-31" style="padding:5px 8px;background:var(--bg-secondary);border:1px solid var(--border);border-radius:var(--radius);color:var(--text-primary);font-family:'JetBrains Mono',monospace;font-size:0.8rem;color-scheme:dark">
           <button id="dsApplyRange" style="padding:5px 14px;background:var(--accent);color:#fff;border:none;border-radius:var(--radius);font-size:0.8rem;cursor:pointer;font-family:inherit">Apply</button>
         </div>
       </div>
